--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ function katanimasi2() {
 }
 
 function katanimasi3(){
-    initeksAkhir = `ᯓᡣ𐭩<br><b>Dearest my love</b>,<br>the sweetest, funniest, most adorable<br><b>stay healthy, my dear 😍😋🩷</b>`;
+    initeksAkhir = `ᯓᡣ𐭩<br><b>Dearest my love</b>,<br>the sweetest, funniest, most adorable<br><b>stay healthy, my dear pihu😍😋🩷</b>`;
     new TypeIt("#teksLove", {
     strings: ["" + initeksAkhir], startDelay: 1, speed: 25, cursor: true,
     afterComplete: function(){
